--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-python-3.11.9
 Flask==2.3.3
-git+https://github.com/openai/whisper.git@v20231117
+openai-whisper==20231117
 torch==2.1.0
 torchaudio==2.1.0
+setuptools==69.0.0
